--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,5 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="evm_app_name">语音备忘录</string>
+	<string name="evm_app_name">语音备忘录</string>
+	<string name="trim_voice_memo">修剪语音备忘录</string>
+	<string name="cancel">取消</string>
+	<string name="trim_memo">修剪备忘录</string>
+	<string name="memo_short">修剪备忘录内容太短，修剪失败</string>
+	<string name="share_memo">共享</string>
+	<string name="recording">正在录音</string>
+	<string name="record_stop">录音已暂停</string>
+
+	<string name="finish">完成</string>
+	<string name="list_share">共享</string>
+	<string name="list_share_title">共享语音备忘录</string>
+	<string name="list_delete">删除语音备忘录</string>
+	<string name="delete">删除</string>
+
+
+	<string name="detail_title">简介</string>
+	<string name="detail_time_format">录制于：yyyy年MM月dd日 E kk:mm</string>
+	<string name="back">返回</string>
+
+	<string name="label_title">标签</string>
+
+	<string name="label_custom_title">自定</string>
+
+	<string name="storage_is_full" msgid="416039755956726221">"存储空间已满"</string>
+	<string name="max_length_reached" msgid="6398215743584093353">"已达到长度上限"</string>
+	<string name="insert_sd_card" product="nosdcard" msgid="4609407750669086933">"装载 USB存储设备"</string>
+	<string name="insert_sd_card" product="default" msgid="1007630222084726808">"请插入 SD 卡"</string>
+	<string name="error_sdcard_access" product="nosdcard" msgid="86629081075681774">"无法访问USB 存储设备。"</string>
+	<string name="error_sdcard_access" product="default" msgid="5750308258096153274">"无法访问SD 卡。"</string>
+	<string name="error_app_internal" msgid="312884382388702022">"发生内部应用错误。"</string>
+	<string name="error_mediadb_new_record" msgid="261714902333432462">"无法保存录制的音频。"</string>
+
 </resources>
 
